fixed overlapping genre text

--- a/src/sass/components/_card.scss
+++ b/src/sass/components/_card.scss
@@ -62,6 +62,7 @@
     }
     &-type {
       font-size: 1rem;
+      text-align: right;
     }
   }
   &-buttons {
